test/FreeFoilTypecheck/SystemF/files/ill-typed/011_bidirectional.lam
if false then (λf:Bool. f) else (λx. x + 2)